<resources>
    <string name="app_name">Order</string>
    <string name="add">Количество</string>
    <string name="minus">-</string>
    <string name="store">Остаток</string>
    <string name="plus">+</string>
    <string name="code">code</string>
    <string name="code_name">Код товара</string>
    <string name="barcode">Штрих код</string>
    <string name="product">Товар</string>
    <string name="x">x</string>
    <string name="col">Кол</string>
    <string name="todo">TODO</string>
    <string name="push">Добавить</string>
    <string name="client">Клиент</string>
    <string name="updsql">updSQL</string>
    <string name="search_hint">search_hint</string>
</resources>
