<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/client" />

            <EditText
                android:id="@+id/client"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:cursorVisible="true"
                android:descendantFocusability="beforeDescendants"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType=""
                android:padding="5dp"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TableLayout
                android:id="@+id/table_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TableRow
                    android:id="@+id/row1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingEnd="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/product"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/col"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="14sp" />

                </TableRow>

            </TableLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:focusableInTouchMode="false"
                android:hint=""
                android:imeOptions="actionSend"
                android:inputType="text" />

            <Button
                android:id="@+id/scanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="scanBar"
                android:text="@string/barcode"
                android:textSize="12sp"></Button>

            <Button
                android:id="@+id/upd_sql"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="updateSQLite"
                android:text="@string/updsql"
                android:textSize="12sp"></Button>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>